# djangocrm-petproject

./: .gitignore  LICENSE  README.md  pyproject.toml
djcrm/: settings.py
leads/: models.py
leads/migrations/: 0001_initial.py
